objects/Test__c.object
<CustomObject>
    <description>General Test</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Api_Enterprise_Server_URL_130__c</fullName>
        <formula>$Api.Enterprise_Server_URL_130</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Api_Enterprise_Server_URL_130</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CrossObjFromAccount__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CrossObjFromAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EProduct__c</fullName>
        <label>EProduct</label>
        <length>20</length>
        <referenceTo>EProducts__x</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encrypted__c</fullName>
        <label>Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>&apos;Constant&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image13__c</fullName>
        <formula>HYPERLINK(&apos;https://&apos;&amp; mApi_Enterprise_Server_URL_130__c &amp; &apos;/resource/testwork&apos;, &apos;Image hyperlien&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image13</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageReference__c</fullName>
        <formula>IMAGE(&apos;/resource/testwork&apos;,&apos;Test work&apos;,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image de référence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object18__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Object18</label>
        <referenceTo>Object18__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object19__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object19</label>
        <referenceTo>Object19__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object20__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object20</label>
        <referenceTo>Object20__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PickListForRecordType__c</fullName>
        <label>PickListForRecordType</label>
        <picklist>
            <picklistValues>
                <fullName>PLRT1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLRT2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>Test__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trail</label>
        <referenceTo>Trail__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueText__c</fullName>
        <label>UniqueText</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WithEncrypted__c</fullName>
        <formula>Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WithEncrypted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mApi_Enterprise_Server_URL_130__c</fullName>
        <formula>mid($Api.Enterprise_Server_URL_130,FIND(&apos;://&apos;,$Api.Enterprise_Server_URL_130)+3,FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_130)-len(&apos;https://&apos;)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mApi_Enterprise_Server_URL_130</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mEnterpriseServeURL_260__c</fullName>
        <formula>mid($Api.Enterprise_Server_URL_260,FIND(&apos;://&apos;,$Api.Enterprise_Server_URL_260)+3,FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_260)-len(&apos;https://&apos;)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mEnterpriseServeURL_260</label>
        <type>Text</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2</fullName>
        <active>true</active>
        <label>RecordType2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MandatoryEncrypt</fullName>
        <active>true</active>
        <errorConditionFormula>len(Encrypted__c) == 0</errorConditionFormula>
        <errorDisplayField>Encrypted__c</errorDisplayField>
        <errorMessage>Please specify encrypted field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UniqueName</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; (Name=VLOOKUP($ObjectType.Test__c.Fields.Name, $ObjectType.Test__c.Fields.Name, Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name already exists</errorMessage>
    </validationRules>
</CustomObject>